# ProtobufExample

./: CMakeLists.txt  conanfile.txt  protobuf.sh
protocol/: CMakeLists.txt  message.proto
src/: main.cpp
src/messagehub/: messagehubimpl.cpp  messagehubimpl.hpp
src/protocol/: person.pb.cc  person.pb.h
